Z-index fix

--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -9,6 +9,7 @@
   border-bottom: 1px solid $color-border;
   background-color: $white;
   position: sticky;
+  z-index: 1;
   top: 0;
 }
 
